[package]
name = "economy-data-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.19"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
poeledger-economy-data = "0.1.1"
serde = { version = "1.0.176", features = ["derive"] }
anyhow = "1.0.72"
surrealdb = { git = "https://github.com/surrealdb/surrealdb", tag = "v1.0.0-beta.9+20230402", features = [
  "protocol-ws",
  "native-tls",
] }
