[package]
name = "economy-data-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.31", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
axum = { version = "0.6", features = ["tracing"] }
chrono = { version = "0.4.26", features = ["serde"] }
mongodb = { version = "2.6", features = ["snappy-compression"] }
futures = "0.3"
poeledger-economy-data = "0.3.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tower-http = { version = "0.4.3", features = ["tracing", "trace", "tokio"] }
