[package]
name = "economy-data-ingest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.175", features = ["derive"] }
surrealdb = { git = "https://github.com/surrealdb/surrealdb", tag = "v1.0.0-beta.9+20230402", features = [
  "protocol-ws",
  "native-tls",
] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
poeledger-economy-data = "0.1.1"
