[package]
name = "economy-data-ingest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.175", features = ["derive"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
poeledger-economy-data = "0.2.0"
influxdb2 = "0.4.2"
influxdb2-structmap = "0.2.0"
influxdb2-derive = "0.1.1"
futures = "0.3.28"
num-traits = "0.2.16"
csv = "1.2.2"

[dev-dependencies]
criterion = "0.5.1"
