[package]
name = "economy-data-ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.31", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4.26", features = ["serde"] }
futures = "0.3"
csv = "1.2.2"
mongodb = { version = "2.6", features = ["snappy-compression"] }
poeledger-economy-data = "0.3.0"
clap = { version = "4.3.21", features = ["derive"] }
