[package]
name = "poe-api-client"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "0.33.0"
async-trait = "0.1.74"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_repr = "0.1.16"
thiserror = "1.0.49"
tracing = "0.1.40"
poe-types = { path = "../poe-types" }
