[package]
name = "poe-api-client"
version = "0.1.3"
edition = "2021"
description = "Client library for the Path of Exile API"
license = "MIT"
documentation = "https://github.com/mattsre/poeledger.com/tree/main/poe-api-client"
homepage = "https://github.com/mattsre/poeledger.com/tree/main/poe-api-client"
repository = "https://github.com/mattsre/poeledger.com/tree/main/poe-api-client"
exclude = ["test"]


[dependencies]
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1.18"
thiserror = "1.0"
tracing = "0.1"
poe-types = { path = "../poe-types", version = "0.1.1" }
