[package]
name = "poeledger-economy-data"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Contains types to be used with poe.ninja data dumps"
homepage = "https://poeledger.com"
documentation = "https://docs.rs/poeledger-economy-data"
repository = "https://github.com/mattsre/poeledger.com"

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.175", features = ["derive"] }
thiserror = "1.0.44"
