[package]
name = "price-history-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.31", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
axum = { version = "0.7", features = ["query"] }
chrono = { version = "0.4.26", features = ["serde"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tower-http = { version = "0.5", features = ["trace", "timeout", "cors"] }
surrealdb = "1.1.0"
