[package]
name = "price-history-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
axum = { version = "0.7", features = ["query"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tower-http = { version = "0.5", features = ["trace", "timeout", "cors"] }
clickhouse = { version = "0.11.6", features = ["time"] }
time = { version = "0.3", features = ["serde"] }
quanta = "0.12"
axum-extra = { version = "0.9.2", features = ["query"] }
time-macros = "0.2.17"
