[package]
name = "river-crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-nats = "0.33.0"
futures = "0.3.29"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
poe-api-client = { path = "../poe-api-client" }
async-trait = "0.1.74"
reqwest = "0.11.22"
