[package]
name = "river-crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-nats = "0.34.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
poe-api-client = { version = "0.1.3" }
async-trait = "0.1"
reqwest = "0.11"
