[package]
name = "stash-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-nats = "0.33.0"
futures = "0.3.29"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full", "tracing"] }
tokio-stream = "0.1.14"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
poe-types = { path = "../poe-types" }
surrealdb = "1.0.0"
regex = "1.10.2"
once_cell = "1.18.0"
