[package]
name = "stash-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-nats = "0.34.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full", "tracing"] }
tokio-stream = "0.1.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
poe-types = { version = "0.1.2" }
regex = "1.10"
once_cell = "1.19.0"
async-trait = "0.1"
clickhouse = { version = "0.11.6", features = ["time"] }
time = { version = "0.3", features = ["serde"] }
quanta = "0.12"
